Various minor Java version relate code updates